--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Smart Notes</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body onload="retrieveFromCache()" style="text-align: center; background-image: url('https://images.pexels.com/photos/1629212/pexels-photo-1629212.jpeg?cs=srgb&dl=pexels-minan1398-1629212.jpg&fm=jpg'); background-size: cover;">
 
