--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
 <button onclick="inp.innerHTML = ''; storeInCache();">Clear Notes</button><br>
 
-<div id="inp" style="height: 550px; width: 700px; border: 1px solid gray; overflow: auto;display: inline-block; background-color: rgba(0, 0, 0, 0.5); padding: 3px; color: white; text-align: left; font-family: verdana;" onkeyup="storeInCache();" contenteditable></div>
+<div id="inp" style="height: 550px; width: 100%; border: 1px solid gray; overflow: auto;display: inline-block; background-color: rgba(0, 0, 0, 0.5); padding: 3px; color: white; text-align: left; font-family: verdana;" onkeyup="storeInCache();" contenteditable></div>
 
-<div style="height: 550px; width: 700px; display: inline-block; background-color: rgba(0, 0, 0, 0.5);">
+<div style="height: 550px; width: 100%; display: inline-block; background-color: rgba(0, 0, 0, 0.5);">
   <iframe id="out" style="height: 100%; width: 100%; border: 1px solid gray; overflow: auto; padding: 3px;" contenteditable></iframe>
 </div>
 
