--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body onload="retrieveFromCache()" style="text-align: center; background-image: url('https://images.pexels.com/photos/1629212/pexels-photo-1629212.jpeg?cs=srgb&dl=pexels-minan1398-1629212.jpg&fm=jpg'); background-size: cover;">
 
-<h2 style="color: white; font-family: verdana;">Smart Notes</h2>
+<h2 style="color: white; font-family: verdana;"><u>Smart Notes</u></h2>
 
 <button onclick="inp.innerHTML = ''; storeInCache();">Clear Notes</button><br>
 
