--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Smart Notes</title>
+	<title>Smart Notes 0.2</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body onload="retrieveFromCache()" style="text-align: center; background-image: url('https://images.pexels.com/photos/1629212/pexels-photo-1629212.jpeg?cs=srgb&dl=pexels-minan1398-1629212.jpg&fm=jpg'); background-size: cover;">
@@ -93,7 +93,7 @@ function retrieveFromCache() {
           const googleSearchUrl = `https://en.wikipedia.org/wiki/${encodeURIComponent(properNoun)}`;
           // const link = `<a href="${googleSearchUrl}" target="_blank">${properNoun}</a>`;
           // const link = `<button style="background-color: transparent; border: 0px; color: blue;" onclick="window.open('${googleSearchUrl}', target='_blank');">${properNoun}</button>`;
-          const link = `<a style="background-color: transparent; color: lightgreen; border: 0px; padding: 0px; margin: 0px;" onclick="out.src = '${googleSearchUrl}';"><i>${properNoun}</i></a>`;
+          const link = `<a style="background-color: transparent; color: lightgreen; border: 0px; padding: 0px; margin: 0px;" onclick="out.src = '${googleSearchUrl}';"><i>${properNoun}</i></a><a style="color: white;"></a>`;
           newText += link;
           lastIndex = properNounRegex.lastIndex;
         }
