--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Smart Notes 0.2</title>
+	<title>Smart Notes 0.3</title>
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body onload="retrieveFromCache()" style="text-align: center; background-image: url('https://images.pexels.com/photos/1629212/pexels-photo-1629212.jpeg?cs=srgb&dl=pexels-minan1398-1629212.jpg&fm=jpg'); background-size: cover;">
 
-<h2 style="color: white; font-family: verdana;"><u>Smart Notes</u></h2>
+<h2 style="color: white; font-family: verdana;"><i>Smart Notes</i></h2>
 
 <button onclick="inp.innerHTML = ''; storeInCache();">Clear Notes</button><br>
 
-<div id="inp" style="height: 275px; width: 100%; border: 1px solid gray; overflow: auto;display: inline-block; background-color: rgba(0, 0, 0, 0.5); padding: 3px; color: white; text-align: left; font-family: verdana;" onkeyup="storeInCache();" contenteditable></div>
+<div id="inp" style="height: 550px; width: 49%; border: 1px solid gray; overflow: auto;display: inline-block; background-color: rgba(0, 0, 0, 0.5); padding: 3px; color: white; text-align: left; font-family: verdana;" onkeyup="storeInCache();" contenteditable></div>
 
-<div style="height: 275px; width: 100%; display: inline-block; background-color: rgba(0, 0, 0, 0.5);">
+<div style="height: 550px; width: 49%; display: inline-block; background-color: rgba(0, 0, 0, 0.5);">
   <iframe id="out" style="height: 100%; width: 100%; border: 1px solid gray; overflow: auto; padding: 3px;" contenteditable></iframe>
 </div>
 
